UIP-3118: Added height, width to LineChart and PieChart

--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -503,6 +503,10 @@ button,
             z-index: 1;
         }
     }
+
+    &--no-margin {
+        margin-bottom: 0;
+    }
 }
 
 button.button--overflow {
