UIP-3061 Darkened placeholder text

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -101,7 +101,7 @@ $color-active: $color-active-blue;
 $color-input-fill: $color-sonic;
 $color-input-border: $color-rabbit-fur;
 $color-input-text: $color-midnight;
-$color-input-placeholder: $color-rabbit-fur;
+$color-input-placeholder: $color-accent-neutral-40;
 $color-input-required: $color-required-yellow;
 $color-input-error: $color-critical-red;
 $color-link-text: $color-active-blue;
