UIP-3107 Creating new top-level section on demo site for Design

--- a/packages/ui-library/src/css/general/_formatted-content.scss
+++ b/packages/ui-library/src/css/general/_formatted-content.scss
@@ -39,6 +39,16 @@
         @include text-label;
     }
 
+    h1,
+    h2,
+    h3,
+    h4 {
+        margin-top: $spacing-lg;
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+
 
     ul {
         margin: 0 0 1em $spacing-lg;
