--- a/packages/ui-library/src/css/_help.scss
+++ b/packages/ui-library/src/css/_help.scss
@@ -34,6 +34,7 @@
 
     // overrides for the default react-tooltip styling
     .tooltip-text {
+        text-align: left;
         color: $color-white;
         @include font-pn-regular;
         font-size: 14px;
