UIP-3137 4.4.0 screenshots and unit input alignment

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -2834,6 +2834,11 @@ a {
     }
 }
 
+// this is only used by the unit input
+.text-field--right-align input {
+    text-align: right;
+}
+
 // Input width settings
 $input-width-settings: (
     'width-max': 590px,
