UIP-3140 - Icon jump on unit input

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -2174,10 +2174,8 @@ input[type=file] {
         position: relative;
 
         .input-message__text {
-            top: 73px;
             box-sizing: border-box;
-            position: unset;
-            width: 100%;
+            width: calc(100% - 1px);
         }
 
         .unit-input__drop-down-list--error {
