--- a/packages/ui-library/src/css/charting/_legend.scss
+++ b/packages/ui-library/src/css/charting/_legend.scss
@@ -1,5 +1,7 @@
 .legend {
     display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -$spacing-md;
 
     &--left {
         justify-content: flex-start;
@@ -15,8 +17,10 @@
 
     &__item {
         display: inline-block;
+        margin-bottom: $spacing-md;
+
         &:not(:last-of-type) {
-            margin-right: $spacing-xl;
+            margin-right: $spacing-lg;
         }
 
         &-info {
