UIP-3162: Column Chart Wrapper

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -542,6 +542,12 @@ $fullwidthBreakpoint: 950px;
     }
 }
 
+.column-chart-wrapper {
+    &__rocker {
+        margin-top: $spacing-sm;
+    }
+}
+
 @keyframes pulse {
     0% {
         opacity: 1;
