--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -2,6 +2,7 @@
 @import 'charting/multiseries-chart';
 @import 'charting/dropdown-selector';
 @import 'charting/legend';
+@import 'charting/chart-wrapper';
 @import 'general/global-message';
 @import 'general/image-component';
 @import 'layout/dashboard-cards';
