--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -41,7 +41,7 @@ $default-input-border-radius: 2px;
 .value-input__input,
 .option-list,
 .icon,
-.icon--clickable,
+.iconComponent--clickable,
 .integer-down,
 .integer-up,
 .view-toggle,
@@ -63,7 +63,7 @@ $default-input-border-radius: 2px;
     .value-input__input,
     .option-list,
     .icon,
-    .icon--clickable,
+    .iconComponent--clickable,
     .integer-down,
     .integer-up,
     .view-toggle,
