--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -470,7 +470,7 @@ button,
         vertical-align: bottom;
     }
 
-    .icon__graphic {
+    .iconComponent__graphic {
         line-height: unset;
     }
 
