UIP-3184-disabled-link-onClick

--- a/packages/ui-library/src/css/_text.scss
+++ b/packages/ui-library/src/css/_text.scss
@@ -172,6 +172,10 @@
     &__icon {
         margin-right: $spacing-xs;
     }
+    &--disabled {
+        pointer-events: none;
+        opacity: $inactive-opacity;
+    }
 }
 
 
