--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -31,6 +31,7 @@
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
 @import 'layout/nav-frame';
+@import 'layout/segmented-box';
 
 $layout-header-height: 46px;
 $layout-nav-width: 205px;
