--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -283,7 +283,7 @@
     position: relative;
     display: table;
     padding: 15px;
-    margin: 15px 0 30px;
+    margin: 15px 0 $spacing-lg;
     border: 1px solid $color-rabbit-fur;
 
     border-radius: 3px;
