--- a/packages/ui-library/src/css/layout/_stack.scss
+++ b/packages/ui-library/src/css/layout/_stack.scss
@@ -42,4 +42,8 @@ div.stack,
     &--xx > * {
         margin-bottom: $spacing-xx;
     }
+
+    > div.stack__wrapper > * {
+        margin: 0;
+    }
 }
