--- a/packages/ui-library/src/css/_colors.scss
+++ b/packages/ui-library/src/css/_colors.scss
@@ -85,6 +85,7 @@ $color-success-highlighted: $color-success-green-highlighted;
 
 // REUSABLE SEMANTIC COLOR VARS (use color vars for all other colors or when semantic meaning does not apply)
 $color-text: $color-elephant;
+$color-label-text: $color-elephant;
 $color-value-text: $color-midnight;
 $color-active: $color-active-blue;
 $color-input-fill: $color-sonic;
