backstop-icon-fixes

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -40,7 +40,7 @@ $default-input-border-radius: 2px;
 .rocker-button__button,
 .value-input__input,
 .option-list,
-.icon,
+.iconComponent,
 .iconComponent--clickable,
 .integer-down,
 .integer-up,
@@ -62,7 +62,7 @@ $default-input-border-radius: 2px;
     .rocker-button__button,
     .value-input__input,
     .option-list,
-    .icon,
+    .iconComponent,
     .iconComponent--clickable,
     .integer-down,
     .integer-up,
