--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -11,7 +11,7 @@
         font-size: 24px;
         flex-basis: 40px;
         line-height: inherit;
-        .icon__graphic {
+        .iconComponent__graphic {
             line-height: inherit;
         }
     }
