--- a/packages/ui-library/src/css/_multivalues.scss
+++ b/packages/ui-library/src/css/_multivalues.scss
@@ -190,7 +190,7 @@
         }
     }
 
-    .icon__graphic {
+    .iconComponent__graphic {
         padding: 0;
         margin-left: 8px;
         font-size: 12px;
