UIP-3215 Add Dark Blue Chip Color

--- a/packages/ui-library/src/css/layout/_chip.scss
+++ b/packages/ui-library/src/css/layout/_chip.scss
@@ -67,6 +67,14 @@
         }
     }
 
+    &--color-dark-blue {
+        @include chip ($color-white, $color-midnight);
+
+        &.chip-component--outline {
+            @include chipOutline($color-midnight);
+        }
+    }
+
     &--full-width {
         display: block;
     }
