UIP-3226: Adding two key icons for cert mgmt

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -401,6 +401,16 @@
     content: $icon-key; 
   }
 }
+.icon-key-three {
+  &:before {
+    content: $icon-key-three; 
+  }
+}
+.icon-key-two {
+  &:before {
+    content: $icon-key-two; 
+  }
+}
 .icon-left {
   &:before {
     content: $icon-left; 
