--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -76,6 +76,8 @@ $icon-idp: "\6a";
 $icon-image: "\69";
 $icon-info: "\49";
 $icon-key: "\4b";
+$icon-key-three: "\e944";
+$icon-key-two: "\e945";
 $icon-left: "\3c";
 $icon-line-chart: "\e92c";
 $icon-link: "\6b";
