UIP-3095 "Create flex item component"

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -21,6 +21,7 @@
 @import 'layout/stretch-content';
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
+@import 'layout/flex-item';
 @import 'layout/field-set';
 @import 'layout/file-details';
 @import 'layout/padding';
