UIP-3163: Allow file input to be disabled

--- a/packages/ui-library/src/css/forms/_file-drop.scss
+++ b/packages/ui-library/src/css/forms/_file-drop.scss
@@ -41,6 +41,13 @@
             z-index: -1;
         }
     }
+
+    &--disabled {
+        opacity: 0.5;
+        label {
+            cursor: default;
+        }
+    }
 }
 
 .input-filedrop--hover,
@@ -91,6 +98,9 @@
 
     .input-filedrop:hover .input-filedrop__upload-text & {
         text-decoration: underline;
+    }
+    .input-filedrop--disabled:hover .input-filedrop__upload-text & {
+        text-decoration: none;
     }
 }
 
