Not worrying about the detached issue for now, since we shouldn't have to deploy the Docker image often

--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -92,9 +92,7 @@
     }
 
     &__bottom-chart {
-        .recharts-tooltip-wrapper {
-            margin-top: 8px;
-        }
+        margin-top: $spacing-xs;
     }
 
     &__rocker {
