UIP-3165 Add Shield Icon

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -596,6 +596,11 @@
     content: $icon-settings; 
   }
 }
+.icon-shield-arrow {
+  &:before {
+    content: $icon-shield-arrow; 
+  }
+}
 .icon-shield {
   &:before {
     content: $icon-shield; 
