--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -115,6 +115,7 @@ $icon-saml: "\e930";
 $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
+$icon-shield-arrow: "\e946";
 $icon-shield: "\e91b";
 $icon-signpost: "\e933";
 $icon-slider: "\7e";
