UIP-3246 Added specific CSS to fix Sandbox Whitelist + tests

--- a/packages/ui-library/src/css/layout/_segmented-box.scss
+++ b/packages/ui-library/src/css/layout/_segmented-box.scss
@@ -65,3 +65,8 @@
 .popover-display .segmented-box--border {
     border: none;
 }
+
+// hack to make the Sandbox Whitelist template
+.popup-frame > .segmented-box {
+    margin: $spacing-sm;
+}
