Resolve UIP-3264 "Chart wrapper click issues"

--- a/packages/ui-library/src/css/charting/_chart-wrapper.scss
+++ b/packages/ui-library/src/css/charting/_chart-wrapper.scss
@@ -14,6 +14,9 @@
         flex-direction: column;
         z-index: 12; //have to be above rocker labels
     }
+    &__message {
+        pointer-events: none;
+    }
     &__loader {
         background: rgba($color-white, 0.6);
     }
